--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -21,5 +21,5 @@
   <%= f.label :price_in_cents %>
   <%= f.number_field :price_in_cents %>
 
-  <%= f.submit %>
+  <%= f.submit "Submit", class: "btn waves-effect waves-light" %>
 <% end %>
