--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -27,5 +27,5 @@
     <%= f.label :password_confirmation %><br/>
     <%= f.password_field :password_confirmation %>
   </div>
-  <div class="actions"><%= f.submit %></div>
+  <div class="actions"><%= f.submit "Create Account", class: "btn waves-effect waves-light" %></div>
 <% end %>
