--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,47 +4,11 @@
 <p>Price: <%= @product.formatted_price %>$</p>
 <%= link_to "Edit", "/products/#{@product.id}/edit", class: "waves-effect waves-light btn" %>
 
-  <h5>Reviews for <%= @product.name %></h5>
-
-  <% @product.reviews.each do |review| %>
-    <p>
-      <%= review.comment %>
-      <br>
-      <% if review.user != nil %>
-        <em> by <%= review.user.name %></em>
-        Added on: <%= review.created_at %>
-      <% end %>
-    </p>
-  <% end %>
-
-  <% if current_user %>
-  <h5>New Review</h5>
-
-  <%= form_for([@product, @review]) do |f| %>
-    <% if @review.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
-
-        <ul>
-        <% @review.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-        </ul>
-      </div>
-    <% end %>
-
-    <div class="field">
-      <%= f.label :comment %><br />
-      <%= f.text_area :comment %>
-    </div>
-    <div class="actions">
-      <%= f.submit "Add Comment", class: "waves-effect waves-light btn" %>
-    </div>
-  <% end %>
-
-<% else %>
-  <p>Please <%= link_to "log in", new_session_path %> to add a review.</p>
-<% end %>
+<h5>Reviews for <%= @product.name %></h5>
+<div class="reviews">
+<%= render :partial => 'review', collection: @reviews %>
+</div>
+<%= render 'new_review', :locals => {:review => @review}%>
 
 
 <%= link_to "Back", "/products", class: "waves-effect waves-light btn"  %>
