delete review jquery refactor

--- a/app/views/products/_review.html.erb
+++ b/app/views/products/_review.html.erb
@@ -5,6 +5,6 @@
     <em> by <%= review.user.name %></em>
   <% end %>
   <% if review.user == current_user %>
-    <%= link_to "Delete", "/products/#{review.product_id}/reviews/#{review.id}", method: :delete, remote: true, class: "delete_review" %>
+    <%= link_to "Delete", "/products/#{review.product_id}/reviews/#{review.id}", method: :delete, remote: true, class: "delete_#{review.id}" %>
   <% end %>
 </div>
